# swade-character-generator

./: README.md  pyproject.toml  swade_char.yaml
src/swade/: Character.py  DieType.py  Edge.py  Skill.py
